create duplicate training program function